--- a/system/templates/schedule_dialog_deletion.html
+++ b/system/templates/schedule_dialog_deletion.html
@@ -12,8 +12,7 @@
 <div class="dialog">
     <div class="content">
         <span
-            >确认删除“{{record.schedule_sn}}”的《{{record.course_name}}》的计划?</span
-        >
+            >确认删除“{{schedule_sn}}”计划号的计划?</span>
     </div>
     <div class="footer">
         <div class="btn">
