最终完成版本

--- a/system/static/grade_list.css
+++ b/system/static/grade_list.css
@@ -10,6 +10,15 @@ form.grade-form > select {
     min-width: 8em;
 }
 
+form.search-form > input, form.search-form > select {
+    padding: 5px;
+    font-size: 1.2em;
+}
+
+form.search-form > select {
+    min-width: 8em;
+}
+
 table {
     border-collapse: collapse;
 }
@@ -33,7 +42,7 @@ tr:nth-child(odd) {
 }
 
 tr:first-child {
-    background-color: #444;
+    background-color: hsl(306 40% 25%);
     color: #fff;
     line-height: 2.5;
 }
@@ -51,7 +60,7 @@ tr:hover:not(:first-child) {
 
 .ctrlbar > .btn {
     padding: 2px 15px;
-    background-color: darkcyan;
+    background-color: hsl(329 45% 38%);
 }
 
 
