--- a/system/static/search_list.css
+++ b/system/static/search_list.css
@@ -51,7 +51,7 @@ tr:hover:not(:first-child) {
 
 .ctrlbar > .btn {
     padding: 2px 15px;
-    background-color: darkcyan;
+    background-color: hsl(329 45% 38%);
 }
 
 
