--- a/system/static/student_course_list.css
+++ b/system/static/student_course_list.css
@@ -18,7 +18,7 @@ form.student_course-form > select {
 
 .ctrlbar > .btn {
     padding: 2px 15px;
-    background-color: darkcyan;
+    background-color: hsl(329 45% 38%);
 }
 
 
