--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -20,7 +20,7 @@
         </div>
         <div class="page-body">
             <div class="sidebar">
-                <ul>
+                <ul style="font-size: 1.9rem">
                     <li {% if location.pathname.startswith("/student") %}active{% endif %}>
                         <a href="/student">学生</a>
                     </li>
