--- a/system/static/schedule_list.css
+++ b/system/static/schedule_list.css
@@ -48,7 +48,7 @@ tr:hover:not(:first-child) {
 
 .ctrlbar > .btn {
     padding: 2px 15px;
-    background-color: darkcyan;
+    background-color: hsl(329 45% 38%);
 }
 
 
