--- a/system/templates/schedule_dialog_deletion.html
+++ b/system/templates/schedule_dialog_deletion.html
@@ -12,13 +12,12 @@
 <div class="dialog">
     <div class="content">
         <span
-            >确认删除“{{record.schedule_sn}}”的《{{record.course_name}}》的计划?</span
-        >
+            >确认删除计划号是“{{schedule_sn}}”计划?</span>
     </div>
     <div class="footer">
         <div class="btn">
             <form
-                action="/action/schedule/delete/{{record.schedule_sn}}"
+                action="/action/schedule/delete/{{schedule_sn}}"
                 method="post"
             >
                 <input type="submit" value="删除" />
